spring-petclinic-config-server/k8s/petclinic-config-server-srv-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  #namespace: staging
  # annotations:
    # service.beta.kubernetes.io/azure-dns-label-name: $DNS_LABEL
    # service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888  
    name: http-8888  
  - protocol: TCP
    port: 8080
    targetPort: 8080  
    name: http-8080
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 443
    targetPort: 8080
    name: https    
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: management
  selector:
    app: config-server
  type: ClusterIP
