spring-petclinic-config-server/k8s/petclinic-config-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-petclinic-config-server
spec:
  rules:
  - host: $ING_HOST
    http:
      paths:
      - path: /config-server
        pathType: "Prefix"      
        backend:
          service:
            name: config-server
            port: 
              number: 8888
